# Tonel

./: .clang-format  .env.example  .gitignore  CHANGELOG-archive.md  CHANGELOG.md  CMakeLists.txt  README.md  config.schema.json
.github/workflows/: build-installer.yml
Git/: .gitignore  CHANGELOG.md  CHANGES.md  CMakeLists.txt  README.md  config.schema.json
Git/.wrangler/cache/: wrangler-account.json
Git/Tonel-Desktop/: CMakeLists.txt
Git/Tonel-Desktop-AppKit/: CMakeLists.txt  Info.plist  README.md
Git/Tonel-Desktop-AppKit/src/: AppDelegate.h  AppDelegate.mm  AppState.h  MainWindowController.h  MainWindowController.mm
Git/Tonel-Desktop-AppKit/src/bridge/: AudioBridge.h  AudioBridge.mm  MixerBridge.h  MixerBridge.mm  NetworkBridge.h  NetworkBridge.mm  S1SignalingClient.h  S1SignalingClient.mm  S1SignalingClient_TCP.cpp.bak
Git/Tonel-Desktop-AppKit/src/ui/: CreateRoomViewController.h  CreateRoomViewController.mm  HomeViewController.mm  JoinRoomViewController.mm  RoomViewController.mm  S1RoundedButton.h  S1RoundedButton.mm  S1Theme.h  SettingsViewController.mm
Git/Tonel-Desktop/src/: ConfigManager.cpp  ConfigManager.h  main.cpp
Git/Tonel-Desktop/src/audio/: AudioDeviceManager.h  AudioEngine.h  MiniaudioEngine.cpp  MiniaudioEngine.h  OpusCodec.h
Git/Tonel-Desktop/src/network/: AudioRouter.cpp  AudioRouter.h  NetworkSocket.cpp  NetworkSocket.h  P2PMeshManager.h  P2PMeshTest.cpp  SignalingClient.cpp  SignalingClient.h
Git/Tonel-Desktop/src/ui/: CreateRoomView.cpp  JoinRoomView.cpp  JoinRoomView.h  RoomView.cpp  SettingsView.h
Git/Tonel-MacOS/: .gitignore  Package.swift  README.md  project.yml
Git/analytics-service/: README.md  package.json  seed.js  server.js  test-smoke.js
Git/analytics-service/public/: tracker.js
Git/deploy/: .env.deploy.example  LESSONS.md  README.md  bootstrap.sh  health.sh  rollback.sh  server.sh  web.sh
Git/deploy/lib/: common.sh
Git/docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOY_SCRIPTING_STANDARDS.md  DEVELOPMENT.md  OPTIMIZATION_LATENCY.md  RELEASE.md  SPA1_PROTOCOL.md  s1-progress.md  s1-server-mixer.md  s1-taglines.md  server-mixer.md
Git/libs/: README.md
Git/ops/: README.md
Git/ops/cloudflared/: config.yml.template
Git/ops/nginx/: srv-new.tonel.io.conf  srv.tonel.io.conf  tonel.io.conf
Git/ops/pm2/: ecosystem.config.cjs
Git/scripts/: bump-version.sh  install-hooks.sh  pretest.sh  release.sh
Git/scripts/hooks/: pre-push
Git/server/: CMakeLists.txt  README.md  config.json.example
Git/server/.cache/clangd/index/: AudioRecorder.cpp.6CE8E9FE2D63C3A8.idx  AudioRecorder.h.0D985B757B07E5E4.idx  audio_mixer.cpp.8DCEE135464C6AFD.idx  audio_mixer.h.432BF843B0BC8540.idx  main.cpp.977B4BE3E7E1AC63.idx  mixer_server.cpp.7F97CA45138CD172.idx  mixer_server.h.60707A6F159FB621.idx  mixer_server_test.cpp.6392713135EF47E0.idx  password_hasher.cpp.898B1F534780DB58.idx  password_hasher.h.67B9E17B5956907E.idx  room.cpp.BD212B9E8ED15462.idx  room.h.0C4463C9A4EFF247.idx  signaling_server.cpp.4EDD12B080640EA5.idx  signaling_server.h.336C44EC035F6598.idx  user.cpp.5AEE6084653D1283.idx  user.h.A82ED49E400722F9.idx
Git/server/src/: AudioRecorder.cpp  AudioRecorder.h  audio_mixer.h  config.cpp  main.cpp  mixer_server.cpp  mixer_server.h  mixer_server_test.cpp  password_hasher.cpp  password_hasher.h  room.cpp  room.h  signaling_server.cpp  signaling_server.h
Git/server/test/: audio_quality_e2e.js  opus_tandem_ab.js  package-lock.json  package.json  remote_ab.sh  run.sh  signaling_integration.js  wt_arrival_jitter.js
Git/server/test/browser/: browser_audio_test.js  run.sh  state_migration_test.js  test_page.html
Git/server/wt-mixer-proxy/: main.go
Git/user-service/: .env.example  package.json  server.js
Git/web/: README.md  UI-REQUIREMENTS.md  index.html  package-lock.json  package.json  webrtc-mixer-proxy.js  ws-mixer-proxy.js  ws-proxy.js
Git/web/src/: App.tsx  index.css
Tonel-Desktop/: README.md  spa1.h
Tonel-Desktop-AppKit/: CMakeLists.txt  README.md
Tonel-Desktop-AppKit/src/: AppState.mm  MainWindowController.mm  main.mm
Tonel-Desktop-AppKit/src/bridge/: MixerBridge.h  MixerBridge.mm  S1SignalingClient.h  S1SignalingClient.mm  S1SignalingClientWS.h
Tonel-Desktop-AppKit/src/ui/: HomeViewController.h  JoinRoomViewController.h  (+4 more)
Tonel-MacOS/: Package.swift  README.md  project.yml
Tonel-MacOS/Tests/: AudioPathOfflineTests.swift  JitterBufferTests.swift
Tonel-Windows/: README.md  Tonel-Windows.sln
Tonel-Windows/TonelWindows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TonelWindows.csproj
Tonel-Windows/installer/: Tonel.iss  build.ps1
analytics-service/: .env.example  README.md  package-lock.json  server.js
deploy/: .env.deploy.example  LESSONS.md  README.md  STANDARDS.md  bootstrap.sh  health.sh  package-macos.sh  rollback.sh  server.sh  upload-r2.sh  web.sh
deploy/lib/: common.sh
design_handoff_homepage_v1/: README.md  Tonel Homepage.html  shared.jsx  tonel-tokens.css  v1.css  v1.jsx  variations.css
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RELEASE.md  SPA1_PROTOCOL.md
libs/: README.md
ops/: README.md
ops/nginx/: api-hk.tonel.io.conf  srv-hk.tonel.io.conf  srv-new.tonel.io.conf  srv.tonel.io.conf  tonel.io.conf
ops/scripts/: start-mixer.sh  start-signaling.sh
scripts/: bump-version.sh  install-hooks.sh  pretest.sh  release.sh
scripts/hooks/: pre-commit  pre-push
server/: CMakeLists.txt  README.md
server/.docker/: Dockerfile
server/build-linux/: mixer_server  signaling_server
server/src/: audio_mixer.cpp  config.h  mixer_server.cpp  mixer_server.h  mixer_server_test.cpp  room.cpp  room.h  signaling_server.cpp  signaling_server.h  user.cpp  user.h
server/test/: audio_quality_e2e.js  jitter_scenarios.sh  package-lock.json  panel_tune_offline.js  remote_ab.sh  run.sh  signaling_integration.js  spa1_wss_client.js  spa1_wt_client.js  wt_arrival_jitter.js
server/wt-mixer-proxy/: go.mod  main.go
user-service/: .gitignore  package-lock.json
web/: README.md  index.html  package-lock.json  package.json  ws-mixer-proxy.js
web/src/: App.tsx  vite-env.d.ts
(+120 files in other folders)
